--- a/web/src/app/components/login/login.component.html
+++ b/web/src/app/components/login/login.component.html
@@ -26,7 +26,7 @@
                                     <p class="text-center">¿Olvidó su contraseña?</p>
                                     <div style="text-align: center">
                                         <a class="btn btn-primary btn-danger " href="/" role="button">Cancelar</a>
-                                        <a class="btn btn-primary bg-btn " href="/" role="button">Ingresar</a>
+                                        <a class="btn btn-primary bg-btn " href="/profile" role="button">Ingresar</a>
                                     </div>
                                 </div>
                             </form>
