--- a/web/src/app/components/login/login.component.html
+++ b/web/src/app/components/login/login.component.html
@@ -4,32 +4,69 @@
         <div class="col">
             <div class="row">
                 <div class="col -md-3">
-                    <div class="card animated flipInY">
+                    <div class="card animated">
                         <div class="card-header bg-company-gren1 font text-center">
                             <h3>
                                 Iniciar sesion
                             </h3>
                         </div>
                         <div class="card-body">
-                            <form method="post">
-                                <div class="form-floating">
-                                    <input type="email" class="form-control" id="floatingPassword" placeholder="name@example.com">
-                                    <label for="floatingPassword">Correo electrónico</label>
+                            <nav>
+                                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                                    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Recolector</button>
+                                    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Conjunto</button>
                                 </div>
-                                <br>
-                                <div class="form-floating">
-                                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                                    <label for="floatingPassword">Contraseña</label>
-                                </div>
-                                <div class="form-group">
-                                    <br>
-                                    <p class="text-center">¿Olvidó su contraseña?</p>
-                                    <div style="text-align: center">
-                                        <a class="btn btn-primary btn-danger " href="/" role="button">Cancelar</a>
-                                        <a class="btn btn-primary bg-btn " href="/profile" role="button">Ingresar</a>
+                            </nav>
+                            <div class="tab-content" id="nav-tabContent">
+                                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                                    <div class="container">
+                                        <br>
+                                        <form method="post">
+                                            <div class="form-floating">
+                                                <input type="email" class="form-control" id="floatingPassword" placeholder="name@example.com">
+                                                <label for="floatingPassword">Correo electrónico colector</label>
+                                            </div>
+                                            <br>
+                                            <div class="form-floating">
+                                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                                                <label for="floatingPassword">Contraseña</label>
+                                            </div>
+                                            <div class="form-group">
+                                                <br>
+                                                <p class="text-center">¿Olvidó su contraseña?</p>
+                                                <div style="text-align: center">
+                                                    <a class="btn btn-primary btn-danger " href="/" role="button">Cancelar</a>
+                                                    <a class="btn btn-primary bg-btn " href="/perfilrecolector" role="button">Ingresar</a>
+                                                </div>
+                                            </div>
+                                        </form>
                                     </div>
                                 </div>
-                            </form>
+                                <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                                    <div class="container">
+                                        <br>  
+                                        <form method="post">
+                                            <div class="form-floating">
+                                                <input type="email" class="form-control" id="floatingPassword" placeholder="name@example.com">
+                                                <label for="floatingPassword">Correo electrónico conjunto</label>
+                                            </div>
+                                            <br>
+                                            <div class="form-floating">
+                                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                                                <label for="floatingPassword">Contraseña</label>
+                                            </div>
+                                            <div class="form-group">
+                                                <br>
+                                                <p class="text-center">¿Olvidó su contraseña?</p>
+                                                <div style="text-align: center">
+                                                    <a class="btn btn-primary btn-danger " href="/" role="button">Cancelar</a>
+                                                    <a class="btn btn-primary bg-btn " href="/perfilconjunto" role="button">Ingresar</a>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -42,3 +79,30 @@
 </div>
 
 <app-footer></app-footer>
+
+<!-- <div class="card-header bg-company-gren1 font text-center">
+    <h3>
+        Iniciar sesion
+    </h3>
+</div>
+<div class="card-body">
+    <form method="post">
+        <div class="form-floating">
+            <input type="email" class="form-control" id="floatingPassword" placeholder="name@example.com">
+            <label for="floatingPassword">Correo electrónico</label>
+        </div>
+        <br>
+        <div class="form-floating">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <label for="floatingPassword">Contraseña</label>
+        </div>
+        <div class="form-group">
+            <br>
+            <p class="text-center">¿Olvidó su contraseña?</p>
+            <div style="text-align: center">
+                <a class="btn btn-primary btn-danger " href="/" role="button">Cancelar</a>
+                <a class="btn btn-primary bg-btn " href="/profile" role="button">Ingresar</a>
+            </div>
+        </div>
+    </form>
+</div> -->
