--- a/web/src/app/components/registro/registro.component.css
+++ b/web/src/app/components/registro/registro.component.css
@@ -17,3 +17,9 @@
     font-size: x-large;
     font-weight: 400;
 }
+
+.modal-font{
+    color: black;
+    font-size: x-large;
+    font-weight: 400;
+}
