--- a/web/src/app/components/login/login.component.html
+++ b/web/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
                                         <form method="post">
                                             <div class="form-floating">
                                                 <input type="email" class="form-control" id="floatingPassword" placeholder="name@example.com">
-                                                <label for="floatingPassword">Correo electrónico colector</label>
+                                                <label for="floatingPassword">Correo electrónico recolector</label>
                                             </div>
                                             <br>
                                             <div class="form-floating">
@@ -73,36 +73,10 @@
             </div>        
         </div> 
         <div class="col">
-            <img src="../../../assets/6.png" alt="responsive image"class="card-img-top" alt="..." width="324" height="334">    
+            <img src="../../../assets/6.png" alt="responsive image"class="card-img-top" alt="..." width="324" height="400">    
         </div>           
     </div>
 </div>
 
 <app-footer></app-footer>
 
-<!-- <div class="card-header bg-company-gren1 font text-center">
-    <h3>
-        Iniciar sesion
-    </h3>
-</div>
-<div class="card-body">
-    <form method="post">
-        <div class="form-floating">
-            <input type="email" class="form-control" id="floatingPassword" placeholder="name@example.com">
-            <label for="floatingPassword">Correo electrónico</label>
-        </div>
-        <br>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">Contraseña</label>
-        </div>
-        <div class="form-group">
-            <br>
-            <p class="text-center">¿Olvidó su contraseña?</p>
-            <div style="text-align: center">
-                <a class="btn btn-primary btn-danger " href="/" role="button">Cancelar</a>
-                <a class="btn btn-primary bg-btn " href="/profile" role="button">Ingresar</a>
-            </div>
-        </div>
-    </form>
-</div> -->
